<resources>
    <string name="app_name">all_login</string>
    <string name="tab_text_1">School/College</string>
    <string name="tab_text_2">Teacher</string>
    <string name="tab_text_3">Student</string>
    <string name="tab_text_4">Parents</string>
    <string name="tab_text_5">Visitor</string>
    <string name="usertype"></string>
    <string name="user_type">Choose User type</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Emailotp">Enter Otp for email verification</string>
    <string name="EmailotpT">Sending Otp for email verification</string>
    <string name="Phoneotp">Enter Otp for mobile verification</string>
    <string name="PhoneotpT">Sending Otp for mobile verification</string>
    <string name="UserId">User Id</string>
    <string name="passowrd">Password</string>
    <string name="slogint">SCHOOL LOGIN</string>
    <string name="tlogint">TEACHER LOGIN</string>
    <string name="stlogint">STUDENT LOGIN</string>
    <string name="plogint">PARENTS LOGIN</string>
    <string name="vlogint">VISITOR LOGIN</string>
    <string name="slogin">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">If you are new visitor? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="ccode">Country Code</string>
    <string name="sotp1">Sent OTP on email</string>
    <string name="sotp">Sent OTP on mobile</string>
    <string name="location">Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Sign Up as a Visitor</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_visitor_nevigation">VisitorNevigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_bottomnevigation">bottomnevigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
