<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryb"
    tools:context=".Schooltab">
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_emailidss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:hint="@string/UserId"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white1"
            android:textColorHint="@color/white1"
            android:textSize="16sp"
            android:layout_marginLeft="30dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimary" />

        <EditText
            android:id="@+id/login_passwordss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white1"
            android:textColorHint="@color/white1"
            android:textSize="16sp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingTop="8dp"
            android:paddingBottom="5dp">

            <CheckBox
                android:id="@+id/show_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/show_pwd"
                android:textStyle="italic"
                android:textColor="@color/showpass"
                android:textSize="17sp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/forgot"
                android:textColor="@color/forgetpass"
                android:textStyle="italic"
                android:textSize="17sp"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtnn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/slogin"
            android:textColor="#151515"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/slogint"
        android:textColor="@color/white1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

</RelativeLayout>